display get_short_name rather than email id

--- a/templates/account/account_detail.html
+++ b/templates/account/account_detail.html
@@ -197,7 +197,7 @@
                                         </div>
                                         <div class="card-author">
                                             <div class="card-author-info">
-                                                <span>{{ product.seller }}</span>
+                                                <span>{{ product.seller.user.get_short_name }}</span>
                                             </div>
                                             <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                                 <i class="fa fa-star" aria-hidden="true"></i>
