--- a/templates/category.html
+++ b/templates/category.html
@@ -317,7 +317,7 @@
                                             <img src="{{ product.seller.user.get_avatar }}" >
                                         </div>
                                         <div class="card-author-info-seller-rating">
-                                            <div class="card-author-info-seller">{{ product.seller }}</div>
+                                            <div class="card-author-info-seller">{{ product.seller.user.get_short_name }}</div>
                                             <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -423,7 +423,7 @@
                                     <div class="card-author">
                                         <div class="card-author-info">
                                             <img src="{{ product.seller.user.get_avatar }}" >
-                                            <span>{{ product.seller }}</span>
+                                            <span>{{ product.seller.user.get_short_name }}</span>
                                         </div>
                                         <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                             <i class="fa fa-star" aria-hidden="true"></i>
@@ -531,7 +531,7 @@
                                             <img src="{{ product.seller.user.get_avatar }}" >
                                         </div>
                                         <div class="card-author-info-seller-rating">
-                                            <div class="card-author-info-seller">{{ product.seller }}</div>
+                                            <div class="card-author-info-seller">{{ product.seller.user.get_short_name }}</div>
                                             <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
