--- a/templates/search.html
+++ b/templates/search.html
@@ -85,7 +85,7 @@
                                 </div>
                                 <div class="card-author">
                                     <div class="card-author-info">
-                                        {{ product.seller }}
+                                        {{ product.seller.user.get_short_name }}
                                     </div>
                                     <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -163,7 +163,7 @@
                                     <div class="card-author">
                                         <div class="card-author-info">
                                             <img src="{{ product.seller.user.get_avatar }}" >
-                                            <span>{{ product.seller }}</span>
+                                            <span>{{ product.seller.user.get_short_name }}</span>
                                         </div>
                                         <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                             <i class="fa fa-star" aria-hidden="true"></i>
@@ -243,7 +243,7 @@
                                     <div class="card-author">
                                         <div class="card-author-info">
                                             <img src="{{ product.seller.user.get_avatar }}" >
-                                            <span>{{ product.seller }}</span>
+                                            <span>{{ product.seller.user.get_short_name }}</span>
                                         </div>
                                         <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                             <i class="fa fa-star" aria-hidden="true"></i>
