--- a/templates/home.html
+++ b/templates/home.html
@@ -208,7 +208,7 @@
                                 </div>
                                 <div class="card-author">
                                     <div class="card-author-info">
-                                        {{ product.seller }}
+                                        {{ product.seller.user.get_short_name }}
                                     </div>
                                     <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -317,7 +317,7 @@
                                             <img src="{{ product.seller.user.get_avatar }}" >
                                         </div>
                                         <div class="card-author-info-seller-rating">
-                                            <div class="card-author-info-seller">{{ product.seller }}</div>
+                                            <div class="card-author-info-seller">{{ product.seller.user.get_short_name }}</div>
                                             <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -427,7 +427,7 @@
                                             <img src="{{ product.seller.user.get_avatar }}" >
                                         </div>
                                         <div class="card-author-info-seller-rating">
-                                            <div class="card-author-info-seller">{{ product.seller }}</div>
+                                            <div class="card-author-info-seller">{{ product.seller.user.get_short_name }}</div>
                                             <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
