display get_short_name rather than email id (2)

--- a/templates/account/account_detail.html
+++ b/templates/account/account_detail.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="ask_to_seller">
                             <button class="ask_to_seller_btn" data-id="{{ user.id }}"
-                                data-name="{{  seller }}"
+                                data-name="{{ seller.user.get_short_name }}"
                                 data-profile="{{  seller.user.get_avatar }}">
                                 문의하기
                             </button>
