--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -180,8 +180,8 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
-                                        <span class="">4/5</span>
-                                        <span class="">(28개)</span>
+                                        <span class="">{{ product.rating }}/5</span>
+                                        <span class="">({{ seller_review_count }}개)</span>
                                     </div>
                                 </div>
                             </div>
