--- a/templates/account/account_change.html
+++ b/templates/account/account_change.html
@@ -55,6 +55,7 @@
             <form class="change_form user" id="change_form_user" method="POST" action="{% url 'change_info' %}" enctype="multipart/form-data">{%  csrf_token %}
                 <!-- basic info part -->
                 기본정보
+                <span class="user-info-guide">* 필수정보를 입력해주셔야 수정이 가능합니다.</span>
                 <div class="base_info">
                     <div class="base_info_image">
                         <img class="add_image" src="{{ user.get_avatar }}">
@@ -83,7 +84,7 @@
                         </div>
                         <div class="base_info_basic_content sex">
                             <div class="base_info_basic_content title">
-                                성별
+                                * 성별
                             </div>
                             {% if request.user.sex == 'female' %}
                             <span class="radio_female_wrapper">
@@ -130,15 +131,15 @@
                         </div>
                         <div class="base_info_basic_content email">
                             <div class="base_info_basic_content title">
-                                * 이메일
+                                이메일
                             </div>
-                            <input type="email" name="email" value="{{ request.user.email }}"/>
+                            <input type="email" name="email" value="{{ request.user.email }}" disabled/>
                         </div>
                         <div class="base_info_basic_content phone">
                             <div class="base_info_basic_content title">
                             * 연락처
                             </div>
-                            <input type="phone" name="phone" value="{{ request.user.phone }}"/>
+                            <input type="phone" name="phone" placeholder="연락처는 타인에게 보이지 않습니다." value="{{ request.user.phone }}"/>
                         </div>
                     </div>
                 </div>
@@ -158,7 +159,7 @@
                     </div>
                     <div class="password_rest_content">
                         <div>
-                            현재 비밀번호 <input type="password" name="current_passwd" id="current_passwd">
+                            * 현재 비밀번호 <input type="password" name="current_passwd" id="current_passwd">
                         </div>
                         <div>
                             변경 비밀번호 <input type="password" name="new_passwd1" id="new_passwd1">
